refactor: code quality improvements + map fixes
- Java: extract AnalyticsRedisKeys constants, replace @Data with safe
  Lombok annotations on Area entity, convert ThresholdRequest to record,
  extract status constants in TelemetryListener/ProcessedTelemetryListener,
  remove dead RuleService init code, fix volatile jwtToken in simulator,
  tighten JwtUtil visibility, add missing Javadocs

- Python: move kafka_consumer pandas import to module level, replace
  f-string logger calls with lazy %s format in app.py, train_model.py,
  kafka_consumer.py

- Angular: add hover tooltip with full device info on map markers,
  add Zone column in devices table, fix getDiscoveryHealth() URL,
  install leaflet/leaflet-draw types for local dev

- Map fixes: resolve 0-height map container (app-map host sizing),
  prevent scroll-wheel from moving the page on map section,
  raise topbar z-index so notification dropdown appears above map,
  implement point-in-polygon to auto-compute area device membership
  without requiring explicit backend assignment

- Tests: fix mock gaps for getAreas/createDevice signatures, fix
  clearLayers/addLayer null-guard on uninitialised Leaflet groups

- Infra: remove obsolete docker-compose version attribute